k8s-rbac-manifestfile/test-pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
  - name: test-container
    image: busybox
  serviceAccountName: default1
