k8s-rbac-manifestfile/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: rbac-test
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
